--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <img src="furkan.jpg" alt="furkan">
 
-    <form action="main.js">
+    <form action="">
         <p>Şifreyi gir</p>
         <input type="text" name="ad" id="i"> <br> <br>
     </form>
