--- a/23april.html
+++ b/23april.html
@@ -25,11 +25,15 @@
 
     <br><br>
 
-    <iframe  width="600" height="370"  src="https://www.youtube.com/embed/VlFeVQwV6MM"></iframe>
+    <iframe  width="750" height="370"  src="https://ardauslu69.github.io/23april.github.io/"></iframe>
 
     <br><br>
 
-    <a href="https://github.com/Arda-Uslu/23April_Website"><button class="codebutton">CODE  </button></a>
+    <a href="https://ardauslu69.github.io/23april">Visit</a>
+
+    <br><br>
+
+    <a href="https://github.com/ardauslu69/23April"><button class="codebutton">CODE  </button></a>
     </div>
 
     <script src="js/main.js"></script>
