--- a/23april.html
+++ b/23april.html
@@ -25,7 +25,7 @@
 
     <br><br>
 
-    <iframe  width="750" height="370"  src="https://ardauslu69.github.io/23april.github.io/"></iframe>
+    <iframe  width="750" height="370"  src="https://ardauslu69.github.io/23april"></iframe>
 
     <br><br>
 
