--- a/23april.html
+++ b/23april.html
@@ -25,15 +25,15 @@
 
     <br><br>
 
-    <iframe  width="750" height="370"  src="https://ardauslu69.github.io/23april"></iframe>
+    <iframe  width="750" height="370"  src="https://ardauslu.github.io/23april"></iframe>
 
     <br><br>
 
-    <a href="https://ardauslu69.github.io/23april">Visit</a>
+    <a href="https://ardauslu.github.io/23april">Visit</a>
 
     <br><br>
 
-    <a href="https://github.com/ardauslu69/23April"><button class="codebutton">CODE  </button></a>
+    <a href="https://github.com/ardauslu/23April"><button class="codebutton">CODE  </button></a>
     </div>
 
     <script src="js/main.js"></script>
