--- a/23april.html
+++ b/23april.html
@@ -25,11 +25,11 @@
 
     <br><br>
 
-    <iframe  width="750" height="370"  src="https://ardauslu.github.io/23april"></iframe>
+    <iframe  width="750" height="370"  src="https://geluklu.github.io/23april"></iframe>
 
     <br><br>
 
-    <a href="https://ardauslu.github.io/23april">Visit</a>
+    <a href="https://geluklu.github.io/23april">Visit</a>
 
     <br><br>
 
