--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <a href="https://www.youtube.com/channel/UCOlwhXsC_D7NUAH_Ktpid9w"><img width="50" height="50" src="images/yt_logo.png" alt="yt_logo"></a>
 
-            <a href="https://github.com/ardauslu69"><img width="50" height="50" src="images/github_logo.png" alt="gt_logo"></a>
+            <a href="https://github.com/geluklu"><img width="50" height="50" src="images/github_logo.png" alt="gt_logo"></a>
 
         </div>
 
