--- a/23april.html
+++ b/23april.html
@@ -33,7 +33,7 @@
 
     <br><br>
 
-    <a href="https://github.com/ardauslu/23April"><button class="codebutton">CODE  </button></a>
+    <a href="https://github.com/geluklu/23April"><button class="codebutton">CODE  </button></a>
     </div>
 
     <script src="js/main.js"></script>
