insert Message here

--- a/dndgame.html
+++ b/dndgame.html
@@ -16,26 +16,23 @@
 <body>
     <a href="index.html"><img src="images/arrow.png" alt="arrow"></a>
 
-    <h2 style="text-align: center;">World Childrens Day</h2>
+    <h2 style="text-align: center;">DnD Game</h2>
 
     <br>
 
     <div style="text-align: center;">
-    <p>Desricption</p>
+    <p style="font-weight: 700; font-size: 15px;">
+        It is a simple DnD like game, i almost finished the game but i forgor <br> 
+        to code it and couldnt figure out how should i continue, <br>so i dropped it.
+
+    </p>
+
 
     <br><br>
 
-    <iframe  width="750" height="370"  src="https://geluklu.github.io/23april/"></iframe>
-
-    <br><br>
-
-    <a href="https://geluklu.github.io/23april/"  class="btn btn-primary" >Visit</a>
-
-    <br><br>
-
-    <a href="https://github.com/geluklu/23april"><button class="codebutton">CODE  </button></a>
+    <a href="https://github.com/geluklu/DnDGame"><button class="codebutton">CODE  </button></a>
     </div>
 
     <script src="js/main.js"></script>
-</body>
+</body> 
 </html>
