--- a/index.html
+++ b/index.html
@@ -44,11 +44,19 @@
             <a href="23april.html"><button class="clickButton" >More</button></a>
         </div>
 
-        </div>
+        <br> <br>
         <div id="DnDGame">
+            <div id="DNDjpg">
+                <img width="250" height="" src="https://ih1.redbubble.net/image.4805235281.5144/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="dnd">
+            </div>
 
+            <p id="description">I tried to make a offline dnd game but it got too complicated and i abandoned it.</p>
 
+            <a href="dndgame.html"><button class="clickButton" >More</button></a>
         </div>
+
+        <br><br>
+
         <div id="Line Following Robot">
 
         </div>
@@ -63,7 +71,7 @@
             </div>
             <a href="https://www.youtube.com/channel/UCOlwhXsC_D7NUAH_Ktpid9w"><img width="50" height="50" src="images/yt_logo.png" alt="yt_logo"></a>
 
-            <a href="https://github.com/ardauslu69"><img width="50" height="50" src="images/github_logo.png" alt="gt_logo"></a>
+            <a href="https://github.com/geluklu"><img width="50" height="50" src="images/github_logo.png" alt="gt_logo"></a>
 
         </div>
 
