--- a/index.html
+++ b/index.html
@@ -15,20 +15,23 @@
 </head>
 <body style>
     <div id="intro">
-        <p style="margin-left: 0%; text-align: center; font-size: large; font-weight: bold;">
-            Hi, I am Arda, I was a ordinary high school student but one day when <br>
-             i was walking around at night,  <br>
-             i suddenly teleported to another world and i became extremely overpowered!
-        </p>
+        
     </div>
+    <br>
+    <p style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, serif; font-size: 80px; font-weight:bold;">
+        This is my newest <b style="font-size: 40px;">and first</b> essay!!! <br> 🔥🔥🔥 </p>
 
+    <iframe src="https://drive.google.com/file/d/1nuH85WTmkC2CpmVghwkBnpZd32yCs9FK/preview" 
+    width="600" height="800" style="text-align: center; display: block; margin-left: 400px;" >
+    </iframe>
+
+    <br> <br>
     
     <div id="projects" style="margin-left: 15%;">
         <div id="amogusTwerk">
             <div id="amogusTwerkGif">
                 <img  src="https://media.tenor.com/jUMex_rdqPwAAAAM/among-us-twerk.gif" alt="amogusTwerk">
             </div>
-
             <p id="description">I wrote a python to twerk a yellow sussy amogus!</p>
 
             <a href="amogustwerk.html"><button class="clickButton" >More</button></a>
@@ -39,7 +42,7 @@
                 <img  src="https://media2.giphy.com/media/yF2eX6C282602m4r7q/200w.gif?cid=6c09b952gnren915jlz9jdd9i5ajqbkhwwkbfc63uq7mqh4x&ep=v1_gifs_search&rid=200w.gif&ct=g" alt="23april">
             </div>
 
-            <p id="description">I made a website to Worlds Childrens Day(a.k.a 23th April).</p>
+            <p id="description">I made a website for Worlds Childrens Day(a.k.a 23th April).</p>
 
             <a href="23april.html"><button class="clickButton" >More</button></a>
         </div>
@@ -74,6 +77,7 @@
             <a href="https://github.com/geluklu"><img width="50" height="50" src="images/github_logo.png" alt="gt_logo"></a>
 
         </div>
+        <br>
 
     </footer>
 
