--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="amogusTwerkGif">
                 <img  src="https://media.tenor.com/jUMex_rdqPwAAAAM/among-us-twerk.gif" alt="amogusTwerk">
             </div>
-            <p id="description">I wrote a python to twerk a yellow sussy amogus!</p>
+            <p id="description">I wrote a python code to twerk a yellow sussy amogus!</p>
 
             <a href="amogustwerk.html"><button class="clickButton" >More</button></a>
         </div>
