--- a/amogustwerk.html
+++ b/amogustwerk.html
@@ -16,12 +16,14 @@
 <body>
     <a href="index.html"><img src="images/arrow.png" alt="arrow"></a>
 
-    <h2 style="text-align: center;">Amogus Twerk</h2>
+    <h2 style="text-align: center;"> <b>Amogus Twerk</b></h2>
 
     <br>
 
     <div style="text-align: center;">
-    <p>Desricption</p>
+    <p>This program will help people with disabilities to twerk without using their bodies! /p>
+        <br>
+    <p>No need to thank me!</p>
 
     <br><br>
 
