--- a/amogustwerk.html
+++ b/amogustwerk.html
@@ -20,8 +20,8 @@
 
     <br>
 
-    <div style="text-align: center;">
-    <p>This program will help people with disabilities to twerk without using their bodies! /p>
+    <div style="text-align: center; ">
+    <p>This program will help people with disabilities to twerk without using their bodies! </p>
         <br>
     <p>No need to thank me!</p>
 
