--- a/dndgame.html
+++ b/dndgame.html
@@ -16,14 +16,14 @@
 <body>
     <a href="index.html"><img src="images/arrow.png" alt="arrow"></a>
 
-    <h2 style="text-align: center;">DnD Game</h2>
+    <h2 style="text-align: center;"> <b>DnD Game</b></h2>
 
     <br>
 
     <div style="text-align: center;">
     <p style="font-weight: 700; font-size: 15px;">
-        It is a simple DnD like game, i almost finished the game but i forgor <br> 
-        to code it and couldnt figure out how should i continue, <br>so i dropped it.
+        It is a simple DnD-like game, I almost finished the game but I forgot <br> 
+        to code it and couldn't figure out how I should continue, <br>so I dropped it.
 
     </p>
 
