--- a/23april.html
+++ b/23april.html
@@ -16,7 +16,7 @@
 <body>
     <a href="index.html"><img src="images/arrow.png" alt="arrow"></a>
 
-    <h2 style="text-align: center;">World Childrens Day</h2>
+    <h2 style="text-align: center;"><b>World Childrens Day</b></h2>
 
     <br>
 
